2017-06-23  NIIBE Yutaka  <gniibe@fsij.org>

	* chopstx.c (chx_init): Use chx_init_arch.
	(chopstx_create): Use chopstx_create_arch.
	(chx_systick_reset, chx_systick_reload, chx_systick_get)
	(usec_to_ticks, chx_enable_intr, chx_clr_intr, chx_disable_intr)
	(chx_set_intr_prio, chx_prio_init, chx_cpu_sched_lock)
	(chx_cpu_sched_unlock, idle, chx_handle_intr)
	(chx_request_preemption, chx_sched, preempt, svc): Move to...
	* chopstx-cortex-m.c: ... here.
	(chx_init_arch, chopstx_create_arch): New.
	* chopstx-cortex-m.h: New for tcontext_t.

2017-06-22  NIIBE Yutaka  <gniibe@fsij.org>

	* chopstx.c (chx_sched): Use ->V for return value.
	(svc): Ditto.
	(chx_wakeup): Set -> for the return value of chx_sched.
	(chopstx_mutex_lock, chopstx_cancel): Likewise.
	(chopstx_exit): Remove naked attribute.

2017-06-21  NIIBE Yutaka  <gniibe@fsij.org>

	* chopstx.c (struct chx_pq): Use uintptr_t for V.
	(struct chx_px): Likewise.
	(struct chx_thread): Likewise.
	(chx_sched): Use uintptr_t for the return value.
	(chx_exit): Use the field V for holding exit value.
	(chopstx_create): Use uintptr_t for STACK_ADDR.
	(chopstx_join): Use the field V for exit value.

2017-06-16  NIIBE Yutaka  <gniibe@fsij.org>

	* chopstx.c (chx_wakeup): Fix for RUNNING==NULL.

	* mcu/usb-mkl27z.c (std_get_status): Use staic var, not auto.

2017-05-18  NIIBE Yutaka  <gniibe@fsij.org>

	* chopstx.c (chx_wakeup): Fix access to REG_R0.

2017-02-02  NIIBE Yutaka  <gniibe@fsij.org>

	* VERSION: 1.3.
	* doc/chopstx.texi (VERSION): 1.3.

2017-02-01  Paul Fertser <fercerpav@gmail.com>

	* board/board-blue-pill.h: New.

2016-12-08  Szczepan Zalega <szczepan@nitrokey.com>

	* board/board-nitrokey-start.h (VAL_GPIO_USB_ODR): Switch off red
	LED for Nitrokey Start.

2016-10-13  NIIBE Yutaka  <gniibe@fsij.org>

	* VERSION: 1.2.
	* doc/chopstx.texi (VERSION): 1.2.

2016-10-12  NIIBE Yutaka  <gniibe@fsij.org>

	* chopstx.c (chopstx_join, chopstx_cancel): chopstx_join is
	cancellation point.
